@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST gemcutter-0.7.0.gem 8192 RMD160 c9f82e9dbef86dec5cc8c4f28266af4de0bb85ea SHA1 e568186f5cd2d72378a9d7576137ec1b5ca6ad94 SHA256 0f0cdca9ded875e0ab8ec350549a63a9cbae6dca67beea56176ce5b213b53e85
+DIST gemcutter-0.7.1-git.tgz 7612 RMD160 f5b933721294c5eb09f88df9bc995e87f2f53553 SHA1 1845a22d2937d6c5ec6ad244aed44af52337b68d SHA256 f21bfa298d3a180517279098da0e54e7ef360ef9fd3a959fab092603c7269e20
 EBUILD gemcutter-0.7.0.ebuild 760 RMD160 e61357255587f845c806ba07da06e91fb1f39a4d SHA1 bf26bed11b5f638e777cf17cdef07d9bc8fc7200 SHA256 68f7956ba4fd30a91684f8c0548c579258cf41be4fd141d45561d549e3a68391
-MISC ChangeLog 1866 RMD160 e4aa7a689ad1a7c06b47ce2b33c4d18b67e2564a SHA1 25171ec5c51ebafd1605b34957f5928af3bffe16 SHA256 d5edbc6c0c502e4e3e9df0002a844b9e9809fff7b55a5429d4bf93dfe6584a5d
+EBUILD gemcutter-0.7.1.ebuild 982 RMD160 65095a2e558091900ba38b537359faa00559ae5d SHA1 67eec9eca410c3681221315be89213ce4beb2a60 SHA256 c4a2d5d1cfe89ef620e4fbf37ba79d8272af0e41c2e8c635b0fb9c9c5bd082a5
+MISC ChangeLog 1990 RMD160 be6a3bae2873de1906443e436f12920b0ff07a3c SHA1 9e2e409a060961dbe422a85b9e80d2188897267d SHA256 3d2a51c23af539adbb4580ac833984abb6236a33e11581468323af255082c061
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7dwAgACgkQiIP6VqMIqNczOAD7B3w4Nqen1/0g0NdMSkKFjhcT
-1oHUpDkbkn1rtKFrDgsA/RlrmkLzyA10R10rsJQ8uMhpfOYPfEhcymKE+vytassD
-=XD4A
+iF4EAREIAAYFAk+uKV8ACgkQiIP6VqMIqNc+qAD9GQOyedtRDuqCMwG6JV2kl01x
+L6GkO8RzjvCW5NPMFSsA/1g8N5paGy6foxaZpF4ZVbAS0Nd1BqtxdICWfYVChKH2
+=ILiq
 -----END PGP SIGNATURE-----
