@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/gemcutter
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gemcutter/ChangeLog,v 1.12 2011/12/06 07:10:53 graaff Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gemcutter/ChangeLog,v 1.13 2012/05/12 09:11:53 graaff Exp $
+
+*gemcutter-0.7.1 (12 May 2012)
+
+  12 May 2012; Hans de Graaff <graaff@gentoo.org> +gemcutter-0.7.1.ebuild:
+  Version bump.
 
   06 Dec 2011; Hans de Graaff <graaff@gentoo.org> -gemcutter-0.6.1.ebuild:
   Remove old version.
